--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta property="og:title" content="호그샵.KR">
-    <meta property="og:description" content="해외이하랜계 ,해외이하앤계 , 회수없는계정과 은장랜덤계정 , 니트로3개월 판매중!!">
+    <meta property="og:description" content="해외이하랜계 ,해외이하랜계 , 회수없는계정과 은장랜덤계정 , 니트로3개월 판매중!!">
     <meta property="og:url" content="https://discord.gg/zmytv6J6Zd">
     <meta property="og:image" content="https://cdn.discordapp.com/icons/911218972588929044/56e5301f58722760348f39023ef07908.webp?size=96">
     <meta content="#FF0000" data-react-helmet="true" name="theme-color">
