--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:image" content="https://cdn.discordapp.com/icons/911218972588929044/56e5301f58722760348f39023ef07908.webp?size=96">
     <meta content="#FF0000" data-react-helmet="true" name="theme-color">
     <script type='text/javascript'>
-      location.href = 'https://discord.com/invite/zmytv6J6Zd'; 
+      location.href = 'https://discord.com/invite/Ep5DjGBct3'; 
     </script>
   </head>
 </html>
