--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <meta property="og:title" content="호그샵.KR">
-    <meta property="og:description" content="호그샵이 돌아왓다! 아시아 랜덤계정 5,500원!! 파격세일중">
+    <meta property="og:description" content="호그샵이 돌아왔다! 해외 이상랜덤계정 8,000원!! 파격세일중">
     <meta property="og:url" content="https://discord.gg/aFTnxnzgAp">
     <meta property="og:image" content="https://cdn.discordapp.com/icons/911218972588929044/56e5301f58722760348f39023ef07908.webp?size=96">
-    <meta content="#FF0000" data-react-helmet="true" name="theme-color">
+    <meta content="#FFFFFF" data-react-helmet="true" name="theme-color">
     <script type='text/javascript'>
       location.href = 'https://discord.com/invite/aFTnxnzgAp'; 
     </script>
